--- a/day 8/new.html
+++ b/day 8/new.html
@@ -11,11 +11,11 @@
       //     document.write("<h3 style='color:red'> hello </h3>");
       //   }
 
-      for (var a = 50; a < 100; a++) {
-        if (a % 2 != 0) {
-          document.write(a + "<br>");
-        }
-      }
+      // for (var a = 50; a < 100; a++) {
+      //   if (a % 2 != 0) {
+      //     document.write(a + "<br>");
+      //   }
+      // }
     </script>
   </body>
 </html>
