--- a/day 10/index.html
+++ b/day 10/index.html
@@ -5,5 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <script>
+      function greeting() {
+        console.log("Hello World");
+      }
+
+      greeting();
+    </script>
+  </body>
 </html>
