--- a/day 10/index.html
+++ b/day 10/index.html
@@ -7,11 +7,15 @@
   </head>
   <body>
     <script>
-      function greeting() {
+      function greeting1() {
+        console.log("Hello World");
+      }
+      function greeting2() {
         console.log("Hello World");
       }
 
-      greeting();
+      greeting2();
+      greeting1();
     </script>
   </body>
 </html>
